@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+26-Nov-2001
+~~~~~~~~~~~
+More Gtk+-1.3.11 support, including use of the new message dialog.
+When the filer loses the primary selection, display the selected items
+shaded, but don't unselect them (Andras Mohari).
+
 24-Nov-2001
 ~~~~~~~~~~~
 Updated to Gtk+-1.3.11.
